--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,13 @@
 <body>
 
     <div class="container">
-        <h1>Sablon</h1>
+        <h1>Termés</h1>
 
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" 
+            data-bs-toggle="modal" data-bs-target="#addModal">
+            Hozzáadás
+          </button>
 
         <table class="table table-striped bg-danger">
             <thead>
@@ -25,8 +30,35 @@
             </tbody>
         </table>
     </div>
-      
-</body>
+
+
+<!-- Modal -->
+<div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+      <div>
+          <div class="mt-3">
+          <label for="name">Név</label>
+          <input type="text" placeholder="Név"
+          id="name" class="form-control">
+      </div>
+     </div>
+    
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+
+</body>     
 <script src="js/bootstrap.js"></script>
 <script src="app.js"></script>
+
 </html>
